# MobileWeldingArm

devel/lib/bunker_base/: bunker_base_node
devel/lib/pkgconfig/: bunker_base.pc  bunker_bringup.pc  bunker_msgs.pc  bunker_pro_description.pc  mobile_welding_arm.pc  my_joint_state.pc  realsense2_description.pc  ugv_sdk.pc  ur_description.pc
devel/lib/python3/dist-packages/my_joint_state/: __init__.py
devel/share/bunker_base/cmake/: bunker_baseConfig.cmake
devel/share/bunker_bringup/cmake/: bunker_bringupConfig.cmake
devel/share/bunker_msgs/cmake/: bunker_msgs-msg-paths.cmake  bunker_msgsConfig.cmake
devel/share/bunker_pro_description/cmake/: bunker_pro_descriptionConfig.cmake
devel/share/mobile_welding_arm/cmake/: mobile_welding_armConfig.cmake
devel/share/my_joint_state/cmake/: my_joint_stateConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/roseus/ros/bunker_msgs/: manifest.l
devel/share/ugv_sdk/cmake/: ugv_sdkConfig.cmake
devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
src/bunker_pro/src/: README.md
src/bunker_pro_description/: CMakeLists.txt
src/bunker_pro_description/config/: joint_names_bunker_pro.yaml
src/bunker_pro_description/launch/: display_urdf.launch  load_bunker_pro.launch
src/bunker_pro_description/rviz/: bunker_pro.rviz
src/marker_pose/: CMakeLists.txt  package.xml
src/marker_pose/launch/: setup.launch
src/marker_pose/msg/: URPose.msg
src/marker_pose/script/: marker_pose.py  print_markers.py
src/mobile_welding_arm/: CMakeLists.txt  package.xml
src/mobile_welding_arm/config/: joint_names.yaml
src/mobile_welding_arm/launch/: 0_mobile_welding_arm.launch  mobile_welding_arm.launch  mobile_welding_arm.rviz
src/mobile_welding_arm/meshes/: STorchRCamKScan.stl
src/mobile_welding_arm/rviz/: mobile_welding_arm-1.rviz  mobile_welding_arm.rviz
src/mobile_welding_arm/script/: marker_follower.py  mobile_welding_arm.py  ugv_controller.py
src/mobile_welding_arm/scripts/: colour_camera.py  mobile_welding_arm.py  my_utilities.py  robot_arm.py  ugv.py
src/mobile_welding_arm/urdf/: mobile_welding_arm.xacro
src/my_joint_state/: CMakeLists.txt  package.xml
src/my_joint_state/src/: my_joint_state.py
src/rviz_estop_panel/: CMakeLists.txt  CMakeLists.txt_back  CMakeLists.txt_back2  package.xml  plugin_description.xml
src/rviz_estop_panel/src/: estop_panel.cpp  estop_panel.py
src/rviz_interact_panel/: CMakeLists.txt  package.xml  plugin_description.xml
src/rviz_interact_panel/include/rviz_interact_panel/: interact_panel.hpp
src/rviz_interact_panel/src/: interact_panel.cpp  interact_panel.h  obsoleted_interact_panel.cpp
src/ugv_simulation/: CMakeLists.txt  package.xml
src/ugv_simulation/launch/: setup.launch
src/ugv_simulation/src/PIDController/: CMakeLists.txt  package.xml
src/ugv_simulation/src/bunker_pro/: CMakeLists.txt  package.xml
src/ugv_simulation/src/bunker_pro/launch/: bunker_pro_base_sim.launch
src/ugv_simulation/src/bunker_pro/src/: bunker_pro_base_sim_node.cpp
src/ugv_simulation/src/bunker_pro/urdf/: bunker_pro.urdf.xacro
src/ur_connection_manager/: CMakeLists.txt  package.xml  setup.py
src/ur_connection_manager/scripts/: ur_connection_manager_node.py
src/ur_connection_manager/srv/: MoveJ.srv  SetTcp.srv
src/ur_description/config/: my_robot_calibration.yaml
src/ur_description/urdf/: ur5.xacro
src/welding_msgs/: CMakeLists.txt  package.xml
src/welding_msgs/srv/: InteractService2.srv
